# moocorn

./: .env.example  .gitignore  CLAUDE.md  GEMINI.md  README.md  docker-compose.yml  start.sh
.github/workflows/: backend-lint-typecheck.yml  docker-build.yml  frontend-lint-typecheck.yml
backend/: Dockerfile  image_processor.py  llm_client.py  main.py  models.py  pyproject.toml  settings.py
backend/data/: flavors.txt  sessions.csv
backend/tests/: test_image_processor.py  test_llm_client.py  test_main.py
frontend/: Dockerfile  electron.cjs  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
frontend/src/: App.tsx  styles.css
frontend/src/components/: CameraScreen.tsx  ErrorScreen.tsx  MoodScreen.tsx  ProgressScreen.tsx  ResultScreen.tsx  WelcomeScreen.tsx
frontend/src/utils/: api.ts
